# mp_bot

./: README.md
mp_bot_description/: package.xml  setup.cfg  setup.py
mp_bot_description/config/: joystick.yaml  mp_controllers.yaml  my_controllers.yaml
mp_bot_description/launch/: display.launch.py  gazebo.launch.py  joystick.launch.py  ros2_control.launch.py
mp_bot_description/meshes/: base_link.stl  caster_back_1.stl  caster_front_1.stl  fl_coxa_1.stl  fl_coxa_1_1.stl  fl_femur_1.stl  fl_femur_1_1.stl  fl_sensor_1.stl  fl_sensor_1_1.stl  fl_tibia_1.stl  fl_tibia_1_1.stl  fr_coxa_1.stl  fr_coxa_1_1.stl  fr_femur_1.stl  fr_femur_1_1.stl  fr_sensor_1.stl  fr_sensor_1_1.stl  fr_tibia_1.stl  fr_tibia_1_1.stl  left_wheel_1.stl  left_wheel_1_1.stl  lidar_1.stl  lidar_1_1.stl  right_wheel_1.stl  right_wheel_1_1.stl  rl_coxa_1.stl  rl_coxa_1_1.stl  rl_femur_1.stl  rl_femur_1_1.stl  rl_sensor_1.stl  rl_sensor_1_1.stl  rl_tibia_1.stl  rl_tibia_1_1.stl  rr_coxa_1.stl  rr_coxa_1_1.stl  rr_femur_1.stl  rr_femur_1_1.stl  rr_sensor_1.stl  rr_sensor_1_1.stl  rr_tibia_1.stl  (+1 more)
mp_bot_description/urdf/: consts.xacro  materials.xacro  mp_bot.gazebo  mp_bot_joints.xacro  mp_bot_links.xacro  robot.urdf.xacro  ros2_control.xacro
mp_bot_description/urdf/later/: mp_bot.trans  ros2_control_wheel.xacro
mp_bot_moveit_config/: CMakeLists.txt  package.xml
mp_bot_msgs/: CMakeLists.txt  package.xml
mp_bot_nav2/: CMakeLists.txt  package.xml
mp_bot_nav2/config/: mapper_params_online_async.yaml
mp_bot_nav2/launch/: navigation_launch.py  online_async_launch.py
mp_bot_robot/: CMakeLists.txt  package.xml
mp_bot_robot/launch/: joystick.launch.py  launch_robot.launch.py
mp_bot_simulation/: CMakeLists.txt  package.xml
mp_bot_simulation/scripts/: stand_up.py
